--- a/css/team.css
+++ b/css/team.css
@@ -1,3 +1,6 @@
+body{
+  margin-top: 120px;
+}
 h1{
   text-align: center;
   font-size: 1.3rem;
@@ -6,7 +9,7 @@ h1{
 .intoductionImages{
   width:100%;
   height: 110rem;
-  background-color: #d5c2c5;
+  background-color: #ddeeeb;
   border-radius: 5px;
 }
   figure.snip0016 {
