--- a/css/map.css
+++ b/css/map.css
@@ -40,21 +40,21 @@
     font-weight:bold;
 }
 
-a:link{
+.mapLink:link{
     text-decoration:none;
 }
 
-a:visited{
+.mapLink:visited{
     color:#000000;
 }
-a:hover {
+.mapLink:hover {
     color:#5b5b5b;
     opacity:0.8;
 }
 
 @media only screen and (min-width: 1025px) {
 .mapPage{
-    background-color:#f9cccc;  
+    background-color:#ddeeeb;  
     overflow: auto;
 }
 
@@ -62,7 +62,6 @@ a:hover {
 img {
   border-radius: 12px;
   position: flex;
-  opacity:0.65;
 }
 
 .imagemap__item {
@@ -74,8 +73,8 @@ img {
     width:720px;
     height:650px;
     margin:1px;
-    margin-left: 8%;
-    margin-top:1.5%;
+    margin-left: 12%;
+    margin-top:2%;
     margin-bottom:0%;
 }
 
@@ -83,24 +82,23 @@ img {
     position:absolute;
     display:inline-block;
     color:black;
-    width:320px;
+    width:420px;
     height:500px; 
     margin:39px;
     float:right;
     margin-right:15%;
-    margin-top:3%
+    margin-top:7%
 }
 
-a:link{
+.mapLink:link{
     text-decoration:none;
 }
 
-a:visited{
-    color:#ffffff;
+.mapLink:visited{
+    color:#3b3a36;
 }
-a:hover {
-    color:#606060;
-    opacity:0.8;
+.mapLink:hover {
+    color:#55aa99;
 }
 
 
@@ -111,27 +109,29 @@ a:hover {
     height:500px; 
     margin:5px;
     float:right;
-    margin-right:8%;
-    margin-top:8%
+    margin-right:7.5%;
+    margin-top:11.5%
 }
 
 .mapText{
-    color:#ffffff;
+    font-family: Philosopher;
+    color:#3b3a36;
     font-size: 22px;
-    font-weight: bold;
-    text-shadow: 4px 4px 6px #f78a8a;
+    text-shadow: 4px 4px 6px #ffffff;
 }
 
 .mapTextTitle{
-    color:#f78a8a;
-    text-shadow: 4px 4px 6px #444444;
-    font-size:33px;
+    font-family: Philosopher;
+    color:#55aa99;
+    text-shadow:4px 4px 6px #ffffff;
+    font-size: 35px;
     font-weight:bold;
 }
 }
-/* map section ended by Amanda*/
 
 
 .heart {
     cursor: url("../image/smallHeart.png"), pointer;
 }
+
+/* map section ended by Amanda*/
